# RecordServiceClient

./: .gitignore  CMakeLists.txt  CNAME  README  README.md  ReleaseNotes.html  ReleaseNotes.md  _config.yml  appint.html  appint.md  atom.xml  betastart.html  betastart.md  config.sh  configure.html  configure.md  examples.html  examples.md  faq.html  faq.md  getin.html  getin.md  index.html  index.md  install.html  install.md  installOnCluster.md  navigation.yml  overview.md  params.json  rsConfig.html  rsConfig.md  test.html  viewAccess.md  vm.html  vm.md
_data/: footer.yml  messages.yml  navigation.yml  sidebar.yml
_includes/: footer.html  header.html  navigation-sliding.html  navigation.html  toc.html
_layouts/: home.html
_posts/: 2016-2-24-TestingVM.md
_sass/: _layout.scss  _sliding-menu.scss  _variables.scss
_site/: examples.html  getin.html  install.html  installOnCluster.html  sitemap.xml  vm.html
_site/images/: rsLogoNoAliasing.xcf
_site/js/: main.js
api/: CMakeLists.txt  RecordService.thrift
cmake_modules/: FindGFlags.cmake  FindGTest.cmake  FindThrift.cmake
cpp/samples/: rs-common.h  (+5 more)
cpp/tests/: CMakeLists.txt  client-test.cc  external-mini-cluster-test.cc  external-mini-cluster.cc  external-mini-cluster.h  start-external-mini-rs-cluster.cc  subprocess.cc  subprocess.h  test-common.h
docs/: ReleaseNotes.html  _config.yml  appint.html  configure.html  examples.html  faq.html  getin.md  index.html  install.html  installOnCluster.md  vm.html  vm.md
java/: pom.xml
jenkins/: bootstrap_toolchain.py  build.sh  build_impala.sh  build_rs.sh  preamble.sh  preamble_impala.sh  preamble_rs.sh  run_local_tests.sh  set_up_local_benchmarks.sh  set_up_toolchain.sh
record-service/: .gitignore  CMakeLists.txt
record-service/api/: CMakeLists.txt  RecordService.thrift
record-service/cpp/samples/: CMakeLists.txt  plan-request.cc  record-service-client.cc  rs-grep.cc
record-service/cpp/tests/: CMakeLists.txt  client-test.cc
record-service/java/: .gitignore  pom.xml
record-service/java/avro/: pom.xml
record-service/java/avro/src/main/java/com/cloudera/recordservice/avro/: GenericRecords.java  SchemaUtils.java  SpecificRecords.java
record-service/java/avro/src/main/java/com/cloudera/recordservice/avro/example/: RecordServiceToAvro.java
record-service/java/avro/src/test/java/com/cloudera/recordservice/avro/: TestGenericRecord.java  TestSpecificRecord.java
record-service/java/avro/src/test/resources/: nation.avdl
record-service/java/client/: pom.xml
record-service/java/client/src/main/java/com/cloudera/recordservice/client/: ByteArray.java  Decimal.java  RecordServicePlannerClient.java  RecordServiceWorkerClient.java  Records.java  Request.java  Rows.java  WorkerClientUtil.java
record-service/java/client/src/test/java/com/cloudera/recordservice/client/: TestBasicClient.java  TestUnsupportedFunctionality.java  UtilTest.java
record-service/java/hive/: README  pom.xml
record-service/java/hive/src/main/java/com/cloudera/recordservice/hive/: RecordServiceHiveInputFormat.java  RecordServiceObjectInspector.java  RecordServiceSerDe.java
record-service/java/mr/: pom.xml
record-service/java/mr/src/main/java/com/cloudera/recordservice/client/: RecordServiceInputFormat.java  RecordServiceInputSplit.java  RecordServiceRecord.java  RecordServiceRecordReader.java  RecordServiceUtils.java  Schema.java  TaskInfo.java
record-service/java/mr/src/main/java/com/cloudera/recordservice/mapred/: RecordServiceInputFormat.java  RecordServiceInputSplit.java  RecordServiceRecordReader.java
record-service/java/mr/src/main/java/com/cloudera/recordservice/mapreduce/: DecimalWritable.java  RecordServiceInputFormat.java  RecordServiceInputSplit.java  RecordServiceRecord.java  RecordServiceRecordReader.java  Schema.java  TaskInfo.java
record-service/java/mr/src/test/java/com/cloudera/recordservice/mapreduce/: MapReduceTest.java
record-service/java/sample/: pom.xml
record-service/java/sample/src/main/java/com/cloudera/recordservice/sample/: SampleClient.java  SampleClientLib.java
record-service/java/spark/: README  pom.xml
record-service/java/spark-benchmark/: pom.xml
record-service/java/spark/src/main/scala/com/cloudera/recordservice/example/: Query1.scala  SchemaRDDExample.scala
record-service/java/spark/src/main/scala/com/cloudera/recordservice/spark/: NextIterator.scala  RecordServiceConf.scala  RecordServiceRDD.scala  RecordServiceRDDBase.scala  RecordServiceRelation.scala  SchemaRecordServiceRDD.scala  package.scala
record-service/java/spark/src/test/scala/com/cloudera/recordservice/spark/: BasicClientSuite.scala  SchemaClientSuite.scala  SparkSqlTest.scala
record-service/jenkins/: build.sh  preamble.sh  set_up_local_benchmarks.sh
record-service/perf-queries/spark/: query1.scala  query2.scala
record-service/tests/: benchmarks.py  collect_benchmark_results.py  create-benchmark-tbls.sql  create-tbls.sql  generate_reports.sh  generate_runtime_plots.R  load-benchmark-data.sh  load-test-data.sh  perf_db_create.sql  run-all-tests.sh  run_benchmarks.py
tests/: benchmarks.py  collect_benchmark_results.py  create-benchmark-tbls.sql  create-table-with-many-partitions-blocks.sh  create-tbls.sql  generate_reports.sh  generate_runtime_plots.R  load-benchmark-data.sh  load-test-data-s3.sh  load-test-data.sh  perf_db_create.sql  run-all-tests.sh  run_authorization_tests.py  run_benchmarks.py  run_kerberos_tests.py  run_sentry_tests.py
(+220 files in other folders)
